Fixed some spacing on sections

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,7 +6,8 @@
     margin: 0; }
   .testimonials .tes-testimonial {
     background-color: #fff;
-    padding: 30px; }
+    padding: 30px;
+    height: 156px; }
   .testimonials .arrow-down {
     margin-left: 20px;
     width: 0;
