--- a/src/scss/_testimonials.scss
+++ b/src/scss/_testimonials.scss
@@ -11,6 +11,7 @@
     .tes-testimonial {
         background-color: $quotebox-color;
         padding: 30px;
+        height: 156px;
     }
 
     .arrow-down {
